--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,8 @@
     "chart.js": "4.4.8",
     "react": "^19.0.0",
     "react-chartjs-2": "5.3.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "vite": "6.2.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
@@ -25,7 +26,6 @@
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
-    "sass-embedded": "1.86.0",
-    "vite": "^6.2.0"
+    "sass-embedded": "1.86.0"
   }
 }
