--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,8 +15,9 @@
     "react": "^19.0.0",
     "react-chartjs-2": "5.3.0",
     "react-dom": "^19.0.0",
-    "vite": "6.2.3",
-    "@vitejs/plugin-react": "^4.3.4"
+    "vite": "5.2.10",
+    "@vitejs/plugin-react": "^4.3.4",
+    "rollup": "^3.29.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
