--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,14 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vitejs/plugin-react": "^4.3.4",
     "axios": "1.8.3",
     "chart.js": "4.4.8",
     "react": "^19.0.0",
     "react-chartjs-2": "5.3.0",
     "react-dom": "^19.0.0",
-    "vite": "5.2.10",
-    "@vitejs/plugin-react": "^4.3.4",
-    "rollup": "^3.29.4"
+    "rollup": "^3.29.4",
+    "vite": "5.2.10"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
@@ -27,6 +27,6 @@
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
-    "sass-embedded": "1.86.0"
+    "sass": "1.86.0"
   }
 }
