--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index",
     "dev": "nodemon index",
-    "build": "cd ../frontend && npm install && npm run build"
+    "build": "(cd ../frontend && npm install && npm run build)"
   },
   "keywords": [],
   "author": "",
